# doc-as-graph

./: .dockerignore  .env.dist  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  test
airflow/: README.md
airflow/dags/: docs_to_graphs.py
docker/: docker-compose-airflow-nofrills.yml
docker/airflow/: Dockerfile
docker/airflow/scripts/: entrypoint.sh
notebooks/: analyze_images_download.ipynb  optimize_pipeline.ipynb  paths.py  verify_input_output_paths.ipynb
src/datasdoc/: datamodels.py  feature_extraction.py  pipeline.py  preprocessing.py  sources.py  targets.py  utils.py  visualization.py
src/datasdoc/config/: general.py
src/docasgraph/: feature_extraction.py  pipeline.py  preprocessing.py  sources.py  targets.py  utils.py  visualization.py
src/docasgraph/config/: general.py
terraform/: README.md  main.tf  read_dotenv.sh  variables.tf
transformations/: README.md  generate_word_embeddings.html  generate_word_embeddings.ipynb  setup_spark_linux.md  udfs.py
visualization/: README.md
