[tool.poetry]
name = "doc-as-graph"
version = "0.1.0"
description = ""
authors = ["lerummi <martin.krause.85@gmx.de>"]

[tool.poetry.dependencies]
python = "3.8"
opencv-python = "^4.5.5"
pytesseract = "^0.3.9"
spacy = "^3.2.2"
apache-airflow = "^2.2.3"
apache-airflow-providers-google = "^6.4.0"
scikit-learn = "^1.0.2"
pandas = "^1.3.5"
bing-image-downloader = "1.0.4"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
ipykernel = "^6.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
